--- a/backend/SprintIQ.API/SprintIQ.API.csproj
+++ b/backend/SprintIQ.API/SprintIQ.API.csproj
@@ -15,6 +15,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="System.Net.Http.Json" Version="10.0.2" />
   </ItemGroup>
 
 </Project>
